[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "garakboard"
version = "0.1.0"
description = "Open LLM Security Leaderboard built on garak"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "sqlalchemy>=2.0",
    "psycopg2-binary>=2.9",
    "pydantic>=2.7",
    "pydantic-settings>=2.2",
    "celery[redis]>=5.4",
    "redis>=5.0",
    "gradio>=4.31,<6",
    "httpx>=0.27",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
# garak is only needed in the worker container — it requires Rust to build
# one of its transitive deps (base2048) and is not used by the API or frontend.
worker = [
    "garak>=0.9",
    "flower>=2.0",
]
dev = [
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "factory-boy>=3.3",
    "fakeredis>=2.23",
]
dataset = [
    "datasets>=2.19",
    "huggingface_hub>=0.23",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--cov=garakboard --cov-report=term-missing -v"

[tool.coverage.run]
source = ["src/garakboard"]
omit = ["tests/*"]