[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "garakboard"
version = "0.1.0"
description = "Open LLM Security Leaderboard built on garak"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "sqlalchemy>=2.0",
    "psycopg2-binary>=2.9",
    "pydantic>=2.7",
    "pydantic-settings>=2.2",
    "gradio>=4.31,<6",
    "httpx>=0.27",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
# garak + prefect are only needed in the pipeline container
pipeline = [
    "prefect==3.7.0",
    "garak>=0.9",
]
dev = [
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "factory-boy>=3.3",
]
dataset = [
    "datasets>=2.19",
    "huggingface_hub>=0.23",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--cov=garakboard --cov-report=term-missing -v"

[tool.coverage.run]
source = ["src/garakboard"]
omit = ["tests/*"]